# wa_llm

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  DEPLOYMENT_LOG.md  Dockerfile  README.md  check_group_status.py  conftest.py  docker-compose.base.yml  docker-compose.prod.yml  docker-compose.yml  enable_group.sql  handler_reaction_example.py  pyproject.toml  send_webhook_local.py  start.sh  test_reaction_fix.py
.github/: renovate.json5
.github/workflows/: code-quality.yml  docker.yml  pr-lint.yml  release.yml  test.yml
.mcp-debug-tools/: config.json
app/: deps.py  ingest.py  main.py  test_message.py
migrations/: env.py
migrations/versions/: 1751740333_add_reaction_table.py  1764196225_781037dc30ec_remove_group_forward_url.py  1764323934_add_reaction_table.py  1764506988_d17bd3601c0c_add_opt_out_table.py  1764509641_c48228318e68_add_created_at_to_group.py  1764593472_8c847c475c9c_add_message_indices.py  1764700000_a1b2c3d4e5f6_add_kb_topic_message_table.py  1764700001_b2c3d4e5f6g7_add_message_text_index.py  1764700002_add_group_member_table.py  1764700002_c3d4e5f6g7h8_refactor_topic_msg.py  1766433364_e15ea65a6a8f_add_auto_summary_fields.py  1766616166_fix_timezone_columns.py  1766759599_40dd46ae8e2f_add_enable_web_search_to_group.py  af197ad4a8ac_create_vector_extension.py
notebooks/: import_wa_group_history.ipynb
scripts/psql/: init.sql
sdk-python-gowa/: README.md  pyproject.toml
sdk-python-gowa/src/gowa_sdk/: __init__.py  base_client.py  client.py  models.py  protocols.py  webhooks.py
sdk-python-gowa/src/gowa_sdk/mixins/: __init__.py  app.py  chat.py  device.py  group.py  message.py  newsletter.py  send.py  user.py
src/: check_db.py  init_db.py  main.py  main_fastapi.py
src/api/: bot_settings.py  daily_summary.py  deps.py  group.py  load_new_kbtopics.py  status.py  summarize_and_send_to_group_api.py  test_webhook.py  webhook.py
src/config/: __init__.py
src/daily_ingest/: daily_ingest.py
src/handler/: __init__.py  base_handler.py  kb_qa.py  knowledge_base_answers.py  prompts.py  router.py  test_kb_qa.py  test_message_handler.py  test_router.py  whatsapp_group_link_spam.py
src/load_new_kbtopics/: __init__.py  test_load_new_kbtopics.py
src/models/: __init__.py  discussion.py  group.py  group_member.py  kb_topic_message.py  knowledge_base_topic.py  message.py  opt_out.py  reaction.py  sender.py  test_group.py  test_message.py  test_reaction.py  test_sender.py  upsert.py
src/reports/: participants_report_2025-12-22T18-11-14.csv  participants_report_2025-12-22_14-07-26.csv
src/search/: __init__.py  hybrid_search.py  test_hybrid_search.py
src/services/: local_model.py  prompt_manager.py  test_prompt_manager.py  web_search.py
src/summarize_and_send_to_groups/: __init__.py
src/templates/: conversation_splitter.j2  intent.j2  link_spam_detector.j2  quick_summary.j2  rag.j2  rephrase.j2  summarize.j2
src/test_utils/: mock_session.py
src/text_embeding/: __init__.py
src/utils/: chat_text.py  importing_wa.py  model_factory.py  opt_out.py  rate_limiter.py
src/whatsapp/: base_client.py  client.py  fastapi_context.py  init_groups.py  manager.py  (+3 more)
tests/: conftest.py  verify_reactions.py  verify_templates.py
(+16 files in other folders)
