[project]
name = "wa-llm"
version = "1.4.6"
description = ""
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "cachetools>=7.0.5",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "logfire[fastapi,httpx,sqlalchemy,system-metrics]>=4.28.0",
    "jinja2>=3.1.6",
    "pgvector>=0.4.2",
    "pydantic-ai>=1.67.0",
    "pydantic-settings>=2.13.1",
    "pydantic>=2.12.5",
    "sqlalchemy[asyncio]>=2.0.48",
    "sqlmodel>=0.0.37",
    "tenacity>=9.1.4",
    "uvicorn>=0.41.0",
    "voyageai>=0.3.7",
    "gowa>=0.1.0",
]

[dependency-groups]
dev = [
    "notebook>=7.5.5",
    "pandas>=3.0.1",
    "nbstripout>=0.9.1",
    "whatstk>=0.8.1",
    "ruff>=0.15.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-httpx>=0.36.0",
    "pyright>=1.1.408",
    "tqdm>=4.67.3",
    "poethepoet>=0.42.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install uv && uv build"

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "pragma: no cover",
    "import *",
    # 1. Exclude an except clause of a specific form:
    "except ValueError:\\n\\s*assume\\(False\\)",
    # 2. Comments to turn coverage on and off:
    "no cover: start(?s:.)*?no cover: stop",
    # 3. A pragma comment that excludes an entire file:
    "\\A(?s:.*# pragma: exclude file.*)\\Z",
    "@pytest\\.fixture.*",
    "@pytest\\.mark.*",
]

omit = [
    "tests/*",
    "/tmp/*",
    "/private/*",
    "*/temporary/*"
]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
log_cli = true

[tool.logfire]
pydantic_plugin_record = "failure"

[tool.poe.tasks]
format = "ruff format"
lint = "ruff check"
typecheck = "pyright"
test = "pytest"

# Run format first, then lint/typecheck/test in parallel
check.sequence = ["format", { parallel = ["lint", "typecheck", "test"] }]
check.help = "Run all development checks (format, then parallel lint/typecheck/test)"

# For local development
# [tool.uv.sources]
# gowa = { path = "../sdk-python-gowa", editable = true }
