[project]
name = "gowa-sdk"
version = "0.1.0"
description = "Async Python SDK for go-whatsapp-web-multidevice"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "wa-llm maintainers" },
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gowa_sdk"]

[tool.hatch.build.targets.sdist]
include = [
    "src/gowa_sdk",
    "README.md",
    "pyproject.toml",
]
